--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@syncfusion/ej2-react-richtexteditor": "*",
     "@syncfusion/ej2-react-schedule": "*",
     "daisyui": "^2.43.0",
+    "firebase": "^9.15.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
+    "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "validator": "^13.7.0"
