--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-toastify": "^9.1.1",
     "validator": "^13.7.0"
   },
   "scripts": {
