--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@syncfusion/ej2-react-popups": "*",
     "@syncfusion/ej2-react-richtexteditor": "*",
     "@syncfusion/ej2-react-schedule": "*",
+    "chart.js": "^4.2.1",
     "daisyui": "^2.43.0",
     "firebase": "^9.15.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.7.1",
