improvements to line chart

--- a/package.json
+++ b/package.json
@@ -4,18 +4,11 @@
   "private": true,
   "dependencies": {
     "@syncfusion/ej2": "*",
-    "@syncfusion/ej2-base": "^20.3.56",
+    "@syncfusion/ej2-base": "^20.4.48",
     "@syncfusion/ej2-react-base": "*",
-    "@syncfusion/ej2-react-buttons": "*",
     "@syncfusion/ej2-react-calendars": "*",
     "@syncfusion/ej2-react-charts": "*",
-    "@syncfusion/ej2-react-dropdowns": "*",
-    "@syncfusion/ej2-react-grids": "^20.3.59",
-    "@syncfusion/ej2-react-inputs": "*",
-    "@syncfusion/ej2-react-kanban": "*",
-    "@syncfusion/ej2-react-popups": "*",
-    "@syncfusion/ej2-react-richtexteditor": "*",
-    "@syncfusion/ej2-react-schedule": "*",
+    "@syncfusion/ej2-react-popups": "^20.4.49",
     "chart.js": "^4.2.1",
     "daisyui": "^2.43.0",
     "firebase": "^9.15.0",
@@ -49,6 +42,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
+    "chartjs-adapter-moment": "^1.0.1",
+    "moment": "^2.29.4",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.19"
   }
