linechart ui fixes, attempt to fix syncfusion

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "dependencies": {
     "@syncfusion/ej2": "*",
-    "@syncfusion/ej2-base": "^20.4.48",
+    "@syncfusion/ej2-base": "~20.4.48",
     "@syncfusion/ej2-react-base": "*",
     "@syncfusion/ej2-react-calendars": "*",
     "@syncfusion/ej2-react-charts": "*",
-    "@syncfusion/ej2-react-popups": "^20.4.49",
+    "@syncfusion/ej2-react-popups": "~20.4.49",
     "chart.js": "^4.2.1",
     "daisyui": "^2.43.0",
     "firebase": "^9.15.0",
