--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "chartjs-adapter-moment": "^1.0.1",
     "moment": "^2.29.4",
     "postcss": "^8.4.21",
+    "prettier-plugin-tailwindcss": "^0.2.3",
     "tailwindcss": "^3.2.7",
     "vite": "^4.1.3",
     "vite-plugin-svgr": "^2.4.0"
